--- a/res/values-large/refs.xml
+++ b/res/values-large/refs.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    
+    <item name="activity_layer_list" type="layout">@layout/activity_layer_twopane</item>
 
 </resources>
