--- a/res/values-sw600dp/refs.xml
+++ b/res/values-sw600dp/refs.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <!--
@@ -8,5 +9,7 @@
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
     <!-- item name="activity_scenario_list" type="layout">@layout/activity_scenario_twopane</item> -->
+
+    <item name="activity_layer_list" type="layout">@layout/activity_layer_twopane</item>
 
 </resources>
