--- a/res/layout-land/map_layout.xml
+++ b/res/layout-land/map_layout.xml
@@ -32,27 +32,7 @@
             android:textColor="@android:color/black"
             android:textSize="12sp"
             android:visibility="visible" />
-
-              <!--  LinearLayout
-        android:id="@+id/animationTimestampLinearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginLeft="6dp"
-        android:orientation="horizontal" -->
-        
-            <!-- ImageView
-            android:id="@+id/radarAnimTimestampImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"    
-        	android:gravity="center_horizontal"
-            android:padding="5dp"
-            style="@style/ImageView" /  -->        
-                  
+  
              <TextView
             android:id="@+id/radarAnimTime"
             android:layout_width="wrap_content"
@@ -69,26 +49,14 @@
             android:textSize="14sp"
             android:textStyle="bold"
             android:visibility="gone" />    
-                  
-      
-        
-        
-        
-        <!-- /LinearLayout-->
-    
+               
          
           <ProgressBar
               android:id="@+id/mapProgressBar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_alignParentBottom="false"
-              android:layout_alignParentLeft="false"
-              android:layout_alignParentRight="false"
-              android:layout_alignParentTop="false"
-              android:layout_centerHorizontal="true"
-              android:layout_centerInParent="false"
-              android:layout_centerVertical="true"
-              android:layout_marginBottom="43dp" />
+              android:layout_marginBottom="43dp"
+              android:visibility="gone"  />
         
     </RelativeLayout>
 
