--- a/res/layout/layer_list_item.xml
+++ b/res/layout/layer_list_item.xml
@@ -2,46 +2,65 @@
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:layout_alignParentTop="true" >
-        
-      <ImageView
-          android:id="@+id/icon"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center"
-          android:src="@drawable/ic_launcher" />
-      
-     <LinearLayout
-         android:layout_width="0dp"
-         android:layout_height="match_parent"
-         android:layout_weight="4"
+         android:layout_alignParentTop="true"
          android:orientation="vertical" >
-        
-         <TextView
-             android:id="@+id/title"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:ellipsize="marquee"
-             android:singleLine="true"
-             android:text="Title"
-             android:textSize="12sp" />
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:text="Example application"
-        android:textSize="16sp" />
-         
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="horizontal" >
+
+             <ImageView
+                 android:id="@+id/icon"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:src="@drawable/ic_launcher" />
+
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="vertical" >
+
+                 <TextView
+                     android:id="@+id/title"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:ellipsize="marquee"
+                     android:singleLine="true"
+                     android:text="Title"
+                     android:textSize="12sp" />
+
+                 <TextView
+                     android:id="@+id/description"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:gravity="center_vertical"
+                     android:text="Example application"
+                     android:textSize="16sp" />
+             </LinearLayout>
+
          </LinearLayout>
 
-     <Button
-         android:id="@+id/button"
-         style="?android:attr/buttonStyleSmall"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Button" />
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent" >
+
+         <TextView
+             android:id="@+id/textView1"
+             android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             android:layout_weight="2"
+             android:text="Small Text"
+             android:textAppearance="?android:attr/textAppearanceSmall" />
+
+         <Button
+             android:id="@+id/button"
+             style="?android:attr/buttonStyleSmall"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="Button" />
+
+     </LinearLayout>
      
     </LinearLayout>   
 
