--- a/res/layout/activity_layer_list.xml
+++ b/res/layout/activity_layer_list.xml
@@ -1,5 +1,21 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_alignParentTop="true"
+         android:orientation="vertical" >
+
+     <ProgressBar
+              android:id="@+id/layerListProgressBar"
+              style="?android:attr/progressBarStyleSmall"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:visibility="gone" />
+          
+    
+<fragment
     android:id="@+id/layer_list"
     android:name="it.giacomos.android.wwwsapp.layers.LayerListFragment"
     android:layout_width="match_parent"
@@ -8,3 +24,5 @@
     android:layout_marginRight="16dp"
     tools:context="it.giacomos.android.wwwsapp.LayerListActivity"
     tools:layout="@android:layout/list_content" />
+
+</LinearLayout>
