--- a/res/layout/layer_list_item.xml
+++ b/res/layout/layer_list_item.xml
@@ -14,11 +14,14 @@
                  android:id="@+id/icon"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
+                 android:layout_gravity="center"
+                 android:layout_margin="5dp"
                  android:src="@drawable/ic_launcher" />
 
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
+                 android:layout_margin="5dp"
                  android:orientation="vertical" >
 
                  <TextView
@@ -46,7 +49,15 @@
          android:layout_height="match_parent" >
 
          <TextView
-             android:id="@+id/textView1"
+             android:id="@+id/tvInstalledVersion"
+             android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             android:layout_weight="2"
+             android:text="Small Text"
+             android:textAppearance="?android:attr/textAppearanceSmall" />
+
+         <TextView
+             android:id="@+id/tvAvailableVersion"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
@@ -58,9 +69,19 @@
              style="?android:attr/buttonStyleSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
+             android:focusable="false"
              android:text="Button" />
 
      </LinearLayout>
+
+     <ProgressBar
+         android:id="@+id/progressBar"
+         style="?android:attr/progressBarStyleHorizontal"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:indeterminate="false"
+         android:max="100"
+         android:visibility="visible" />
      
     </LinearLayout>   
 
