--- a/res/layout/layer_list_item.xml
+++ b/res/layout/layer_list_item.xml
@@ -28,10 +28,10 @@
                      android:id="@+id/title"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
-                     android:ellipsize="marquee"
+                     android:ellipsize="none"
+                     android:scrollHorizontally="false"
                      android:singleLine="true"
-                     android:text="Title"
-                     android:textSize="12sp" />
+                     android:text="Title" />
 
                  <TextView
                      android:id="@+id/description"
@@ -39,7 +39,9 @@
                      android:layout_height="wrap_content"
                      android:gravity="center_vertical"
                      android:text="Example application"
+                     android:textAppearance="?android:attr/textAppearanceSmall"
                      android:textSize="16sp" />
+
              </LinearLayout>
 
          </LinearLayout>
@@ -60,6 +62,7 @@
              android:id="@+id/tvAvailableVersion"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
+             android:layout_gravity="right|center"
              android:layout_weight="2"
              android:text="Small Text"
              android:textAppearance="?android:attr/textAppearanceSmall" />
